# shopeat

./: .gitignore  QUICKSTART.md  README.md  dev.sh  docker-compose.yml  package-lock.json  setup.sh
backend/: Dockerfile  cli_shopping.py  debug_events.py  env.example  main.py  pyproject.toml  realtime.py  requirements.txt  simple_agent_test.py  simple_agent_test_with_audio.py  test_agent.py  voice_duplex_chat.py
docs/: architecture-diagram.txt  architecture.md
frontend/: Dockerfile  app.js  env.example  index.html  package-lock.json  package.json  styles.css
shared/: config.py
